--- a/Milky.WebUI/Areas/Admin/Views/Gallery/Index.cshtml
+++ b/Milky.WebUI/Areas/Admin/Views/Gallery/Index.cshtml
@@ -11,7 +11,7 @@
         <div class="white_shd full margin_bottom_30">
             <div class="full graph_head">
                 <div class="heading1 margin_0">
-                    <h2>Kategori Listesi</h2>
+                    <h2>Galeri Listesi</h2>
                 </div>
             </div>
             <div class="table_section padding_infor_info">
